# RusticSOM

./: .travis.yml  Cargo.toml  LICENSE  README.md
benches/: som.rs
src/: lib.rs  main.rs
tests/: data.rs  test.rs  test_json.rs
